project/logs/20250801_113542.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3d.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3d.PS.hlsl, profile:ps_6_0

Object3d.PS.hlsl:57:23: error: redefinition of 'output'
    PixelShaderOutput output;
                      ^
Object3d.PS.hlsl:32:23: note: previous definition is here
    PixelShaderOutput output;
                      ^
Object3d.PS.hlsl:59:46: error: non-ASCII characters are not allowed outside of literals and identifiers
    UVをそのまま色として出力する（ 確認用）
                                ^~
Object3d.PS.hlsl:59:5: error: unknown type name 'UVをそのまま色として出力する'
    UVをそのまま色として出力する（ 確認用）
    ^
Object3d.PS.hlsl:59:59: error: non-ASCII characters are not allowed outside of literals and identifiers
    UVをそのまま色として出力する（ 確認用）
                                         ^~
Object3d.PS.hlsl:59:59: error: expected ';' at end of declaration
    UVをそのまま色として出力する（ 確認用）
                                         ^
                                         ;

